--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -52,6 +52,7 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Scripts\CatchFallingObjects.cs" />
+     <Compile Include="Assets\Scripts\DecayAndDie.cs" />
      <Compile Include="Assets\Scripts\GameController.cs" />
      <Compile Include="Assets\Scripts\MovementController.cs" />
  <Reference Include="UnityEngine.UI">
