--- a/MmmBurrito.csproj
+++ b/MmmBurrito.csproj
@@ -91,6 +91,7 @@
     <Compile Include="Assets\Scripts\Order.cs" />
     <Compile Include="Assets\Scripts\OrderList.cs" />
     <Compile Include="Assets\Scripts\SubmissionController.cs" />
+    <Compile Include="Assets\VulnerableToHazards.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
