refactoring with level select

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -51,11 +51,19 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\OrderController.cs" />
      <Compile Include="Assets\Scripts\Conveyor.cs" />
      <Compile Include="Assets\Scripts\DecayAndDie.cs" />
+     <Compile Include="Assets\Scripts\Game Controllers\CameraPlayerBias.cs" />
+     <Compile Include="Assets\Scripts\Game Controllers\DontDestroyOnLoad.cs" />
+     <Compile Include="Assets\Scripts\Game Controllers\FollowPlayer.cs" />
+     <Compile Include="Assets\Scripts\Game Controllers\LevelLoader.cs" />
+     <Compile Include="Assets\Scripts\Game Controllers\SpawnController.cs" />
      <Compile Include="Assets\Scripts\GameController.cs" />
+     <Compile Include="Assets\Scripts\IdentifyAsSpawnPoint.cs" />
      <Compile Include="Assets\Scripts\IsometricCamera.cs" />
      <Compile Include="Assets\Scripts\MovementController.cs" />
+     <Compile Include="Assets\Scripts\MovementControllerIsometric.cs" />
      <Compile Include="Assets\Scripts\ObjectCatcher.cs" />
      <Compile Include="Assets\Scripts\ObjectSpawn.cs" />
      <Compile Include="Assets\Scripts\Order.cs" />
