--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -51,31 +51,32 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\OrderController.cs" />
-     <Compile Include="Assets\Scripts\Conveyor.cs" />
-     <Compile Include="Assets\Scripts\DecayAndDie.cs" />
-     <Compile Include="Assets\Scripts\Game Controllers\CameraPlayerBias.cs" />
-     <Compile Include="Assets\Scripts\Game Controllers\DontDestroyOnLoad.cs" />
-     <Compile Include="Assets\Scripts\Game Controllers\FollowPlayer.cs" />
-     <Compile Include="Assets\Scripts\Game Controllers\LevelLoader.cs" />
+     <Compile Include="Assets\Scripts\Game Controllers\GameController.cs" />
+     <Compile Include="Assets\Scripts\Game Controllers\OrderController.cs" />
      <Compile Include="Assets\Scripts\Game Controllers\SpawnController.cs" />
-     <Compile Include="Assets\Scripts\GameController.cs" />
-     <Compile Include="Assets\Scripts\IdentifyAsSpawnPoint.cs" />
-     <Compile Include="Assets\Scripts\IsometricCamera.cs" />
-     <Compile Include="Assets\Scripts\MovementController.cs" />
-     <Compile Include="Assets\Scripts\MovementControllerIsometric.cs" />
-     <Compile Include="Assets\Scripts\ObjectCatcher.cs" />
-     <Compile Include="Assets\Scripts\ObjectSpawn.cs" />
-     <Compile Include="Assets\Scripts\Order.cs" />
-     <Compile Include="Assets\Scripts\OrderList.cs" />
-     <Compile Include="Assets\Scripts\RotationPrevention.cs" />
-     <Compile Include="Assets\Scripts\SubmissionController.cs" />
-     <Compile Include="Assets\Scripts\ThirdPersonCamera.cs" />
-     <Compile Include="Assets\Scripts\TrashController.cs" />
+     <Compile Include="Assets\Scripts\Game Controllers\SubmissionController.cs" />
+     <Compile Include="Assets\Scripts\Meta Scripts\_preloader.cs" />
+     <Compile Include="Assets\Scripts\Meta Scripts\DontDestroyOnLoad.cs" />
+     <Compile Include="Assets\Scripts\Meta Scripts\LevelLoader.cs" />
+     <Compile Include="Assets\Scripts\Misc Scripts\Conveyor.cs" />
+     <Compile Include="Assets\Scripts\Misc Scripts\DecayAndDie.cs" />
+     <Compile Include="Assets\Scripts\Misc Scripts\FollowPlayer.cs" />
+     <Compile Include="Assets\Scripts\Misc Scripts\IdentifyAsSpawnPoint.cs" />
+     <Compile Include="Assets\Scripts\Misc Scripts\IsometricCamera.cs" />
+     <Compile Include="Assets\Scripts\Misc Scripts\IsometricCameraOld.cs" />
+     <Compile Include="Assets\Scripts\Misc Scripts\MovementController.cs" />
+     <Compile Include="Assets\Scripts\Misc Scripts\MovementControllerIsometric.cs" />
+     <Compile Include="Assets\Scripts\Misc Scripts\ObjectCatcher.cs" />
+     <Compile Include="Assets\Scripts\Misc Scripts\ObjectSpawn.cs" />
+     <Compile Include="Assets\Scripts\Misc Scripts\Order.cs" />
+     <Compile Include="Assets\Scripts\Misc Scripts\OrderList.cs" />
+     <Compile Include="Assets\Scripts\Misc Scripts\RotationPrevention.cs" />
+     <Compile Include="Assets\Scripts\Misc Scripts\ThirdPersonCamera.cs" />
+     <Compile Include="Assets\Scripts\Misc Scripts\TrashController.cs" />
+     <Compile Include="Assets\Scripts\Misc Scripts\VulnerableToHazards.cs" />
      <Compile Include="Assets\Scripts\UI\LevelEndUI.cs" />
      <Compile Include="Assets\Scripts\UI\OrderUI.cs" />
      <Compile Include="Assets\Scripts\UI\Timer.cs" />
-     <Compile Include="Assets\Scripts\VulnerableToHazards.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>D:/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
