basic movement rework

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -53,6 +53,7 @@
   <ItemGroup>
      <Compile Include="Assets\IngredientIndicator.cs" />
      <Compile Include="Assets\Logging\LoggingManager.cs" />
+     <Compile Include="Assets\MoveToScreen.cs" />
      <Compile Include="Assets\Scripts\Game Controllers\GameController.cs" />
      <Compile Include="Assets\Scripts\Game Controllers\OrderController.cs" />
      <Compile Include="Assets\Scripts\Game Controllers\SpawnController.cs" />
@@ -62,7 +63,7 @@
      <Compile Include="Assets\Scripts\Meta Scripts\LevelLoader.cs" />
      <Compile Include="Assets\Scripts\Misc Scripts\CaughtIngredientSet.cs" />
      <Compile Include="Assets\Scripts\Misc Scripts\Conveyor.cs" />
-     <Compile Include="Assets\Scripts\Misc Scripts\DecayAndDie.cs" />
+     <Compile Include="Assets\Scripts\Misc Scripts\FallDecayDie.cs" />
      <Compile Include="Assets\Scripts\Misc Scripts\FollowPlayer.cs" />
      <Compile Include="Assets\Scripts\Misc Scripts\IdentifyAsSpawnPoint.cs" />
      <Compile Include="Assets\Scripts\Misc Scripts\IngredientSet.cs" />
@@ -70,6 +71,7 @@
      <Compile Include="Assets\Scripts\Misc Scripts\IsometricCameraOld.cs" />
      <Compile Include="Assets\Scripts\Misc Scripts\MovementController.cs" />
      <Compile Include="Assets\Scripts\Misc Scripts\MovementControllerIsometric.cs" />
+     <Compile Include="Assets\Scripts\Misc Scripts\MovementControllerIsometricNew.cs" />
      <Compile Include="Assets\Scripts\Misc Scripts\ObjectCatcher.cs" />
      <Compile Include="Assets\Scripts\Misc Scripts\ObjectSpawn.cs" />
      <Compile Include="Assets\Scripts\Misc Scripts\OrderList.cs" />
