basic dash particles

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -51,10 +51,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\IngredientIndicator.cs" />
+     <Compile Include="Assets\DestroyAfterDelay.cs" />
      <Compile Include="Assets\Logging\LoggingManager.cs" />
-     <Compile Include="Assets\LoggingCalls.cs" />
-     <Compile Include="Assets\MoveToScreen.cs" />
      <Compile Include="Assets\Scripts\Game Controllers\GameController.cs" />
      <Compile Include="Assets\Scripts\Game Controllers\OrderController.cs" />
      <Compile Include="Assets\Scripts\Game Controllers\SpawnController.cs" />
@@ -67,24 +65,28 @@
      <Compile Include="Assets\Scripts\Misc Scripts\FallDecayDie.cs" />
      <Compile Include="Assets\Scripts\Misc Scripts\FollowPlayer.cs" />
      <Compile Include="Assets\Scripts\Misc Scripts\IdentifyAsSpawnPoint.cs" />
+     <Compile Include="Assets\Scripts\Misc Scripts\IngredientIndicator.cs" />
      <Compile Include="Assets\Scripts\Misc Scripts\IngredientSet.cs" />
      <Compile Include="Assets\Scripts\Misc Scripts\IsometricCamera.cs" />
      <Compile Include="Assets\Scripts\Misc Scripts\IsometricCameraOld.cs" />
+     <Compile Include="Assets\Scripts\Misc Scripts\LoggingCalls.cs" />
      <Compile Include="Assets\Scripts\Misc Scripts\MovementController.cs" />
      <Compile Include="Assets\Scripts\Misc Scripts\MovementControllerIsometric.cs" />
      <Compile Include="Assets\Scripts\Misc Scripts\MovementControllerIsometricNew.cs" />
+     <Compile Include="Assets\Scripts\Misc Scripts\MoveToScreen.cs" />
      <Compile Include="Assets\Scripts\Misc Scripts\ObjectCatcher.cs" />
      <Compile Include="Assets\Scripts\Misc Scripts\ObjectSpawn.cs" />
      <Compile Include="Assets\Scripts\Misc Scripts\OrderList.cs" />
      <Compile Include="Assets\Scripts\Misc Scripts\RotationPrevention.cs" />
      <Compile Include="Assets\Scripts\Misc Scripts\ThirdPersonCamera.cs" />
+     <Compile Include="Assets\Scripts\Misc Scripts\TiledFloor.cs" />
      <Compile Include="Assets\Scripts\Misc Scripts\TrashController.cs" />
+     <Compile Include="Assets\Scripts\Misc Scripts\TrashingController.cs" />
      <Compile Include="Assets\Scripts\Misc Scripts\VulnerableToHazards.cs" />
      <Compile Include="Assets\Scripts\Misc Scripts\WalkingChef.cs" />
      <Compile Include="Assets\Scripts\UI\LevelEndUI.cs" />
      <Compile Include="Assets\Scripts\UI\OrderUI.cs" />
      <Compile Include="Assets\Scripts\UI\Timer.cs" />
-     <Compile Include="Assets\TiledFloor.cs" />
      <Compile Include="Assets\TileDraw\Scripts\Assets\Entity.cs" />
      <Compile Include="Assets\TileDraw\Scripts\Assets\EntitySet.cs" />
      <Compile Include="Assets\TileDraw\Scripts\Assets\IAsset.cs" />
@@ -99,7 +101,6 @@
      <Compile Include="Assets\TileDraw\Scripts\Util\CreatePlane.cs" />
      <Compile Include="Assets\TileDraw\Scripts\Util\Enums.cs" />
      <Compile Include="Assets\TileDraw\Scripts\Util\Util.cs" />
-     <Compile Include="Assets\TrashingController.cs" />
      <None Include="Assets\TileDraw\readme.txt" />
  <Reference Include="UnityEngine.UI">
  <HintPath>D:/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
