added time boost powerup

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -51,7 +51,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\DestroyAfterDelay.cs" />
+     <Compile Include="Assets\DestroyOnPlayerCollision.cs" />
      <Compile Include="Assets\Logging\LoggingManager.cs" />
      <Compile Include="Assets\Scripts\Game Controllers\GameController.cs" />
      <Compile Include="Assets\Scripts\Game Controllers\OrderController.cs" />
@@ -62,6 +62,7 @@
      <Compile Include="Assets\Scripts\Meta Scripts\LevelLoader.cs" />
      <Compile Include="Assets\Scripts\Misc Scripts\CaughtIngredientSet.cs" />
      <Compile Include="Assets\Scripts\Misc Scripts\Conveyor.cs" />
+     <Compile Include="Assets\Scripts\Misc Scripts\DestroyAfterDelay.cs" />
      <Compile Include="Assets\Scripts\Misc Scripts\FallDecayDie.cs" />
      <Compile Include="Assets\Scripts\Misc Scripts\FollowPlayer.cs" />
      <Compile Include="Assets\Scripts\Misc Scripts\IdentifyAsSpawnPoint.cs" />
@@ -77,6 +78,7 @@
      <Compile Include="Assets\Scripts\Misc Scripts\ObjectCatcher.cs" />
      <Compile Include="Assets\Scripts\Misc Scripts\ObjectSpawn.cs" />
      <Compile Include="Assets\Scripts\Misc Scripts\OrderList.cs" />
+     <Compile Include="Assets\Scripts\Misc Scripts\Powerups\PowerupAddTime.cs" />
      <Compile Include="Assets\Scripts\Misc Scripts\RotationPrevention.cs" />
      <Compile Include="Assets\Scripts\Misc Scripts\ThirdPersonCamera.cs" />
      <Compile Include="Assets\Scripts\Misc Scripts\TiledFloor.cs" />
