--- a/MmmBurrito.csproj
+++ b/MmmBurrito.csproj
@@ -13,11 +13,13 @@
     <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>Unity Subset v3.5</TargetFrameworkProfile>
-    <CompilerResponseFile></CompilerResponseFile>
+    <CompilerResponseFile>
+    </CompilerResponseFile>
     <UnityProjectType>Game:1</UnityProjectType>
     <UnityBuildTarget>StandaloneWindows64:19</UnityBuildTarget>
     <UnityVersion>2017.1.1f1</UnityVersion>
-    <RootNamespace></RootNamespace>
+    <RootNamespace>
+    </RootNamespace>
     <LangVersion>4</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -102,12 +104,15 @@
     <Compile Include="Assets\Scripts\Misc Scripts\MovementControllerIsometric.cs" />
     <Compile Include="Assets\Scripts\Misc Scripts\MovementControllerIsometricNew.cs" />
     <Compile Include="Assets\Scripts\Misc Scripts\MoveToScreen.cs" />
+    <Compile Include="Assets\Scripts\Misc Scripts\RatSpawn.cs" />
     <Compile Include="Assets\Scripts\Misc Scripts\ObjectCatcher.cs" />
     <Compile Include="Assets\Scripts\Misc Scripts\ObjectSpawn.cs" />
     <Compile Include="Assets\Scripts\Misc Scripts\OrderList.cs" />
     <Compile Include="Assets\Scripts\Misc Scripts\Powerups\PowerupAddTime.cs" />
+    <Compile Include="Assets\Scripts\Misc Scripts\Powerups\PowerupMakeInvulnerable.cs" />
     <Compile Include="Assets\Scripts\Misc Scripts\Rats.cs" />
     <Compile Include="Assets\Scripts\Misc Scripts\RotationPrevention.cs" />
+    <Compile Include="Assets\Scripts\Misc Scripts\SoundController.cs" />
     <Compile Include="Assets\Scripts\Misc Scripts\ThirdPersonCamera.cs" />
     <Compile Include="Assets\Scripts\Misc Scripts\TiledFloor.cs" />
     <Compile Include="Assets\Scripts\Misc Scripts\TrashController.cs" />
