--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -51,6 +51,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\FlashIfSubmissionPossible.cs" />
      <Compile Include="Assets\Logging\LoggingManager.cs" />
      <Compile Include="Assets\Scripts\Game Controllers\GameController.cs" />
      <Compile Include="Assets\Scripts\Game Controllers\OrderController.cs" />
@@ -60,6 +61,7 @@
      <Compile Include="Assets\Scripts\Meta Scripts\DontDestroyOnLoad.cs" />
      <Compile Include="Assets\Scripts\Meta Scripts\LevelLoader.cs" />
      <Compile Include="Assets\Scripts\Misc Scripts\CaughtIngredientSet.cs" />
+     <Compile Include="Assets\Scripts\Misc Scripts\ColorFlash.cs" />
      <Compile Include="Assets\Scripts\Misc Scripts\Conveyor.cs" />
      <Compile Include="Assets\Scripts\Misc Scripts\DestroyAfterDelay.cs" />
      <Compile Include="Assets\Scripts\Misc Scripts\DestroyOnPlayerCollision.cs" />
@@ -81,7 +83,9 @@
      <Compile Include="Assets\Scripts\Misc Scripts\Powerups\PowerupAddTime.cs" />
      <Compile Include="Assets\Scripts\Misc Scripts\Powerups\PowerupMakeInvulnerable.cs" />
      <Compile Include="Assets\Scripts\Misc Scripts\Rats.cs" />
+     <Compile Include="Assets\Scripts\Misc Scripts\RatSpawn.cs" />
      <Compile Include="Assets\Scripts\Misc Scripts\RotationPrevention.cs" />
+     <Compile Include="Assets\Scripts\Misc Scripts\SoundController.cs" />
      <Compile Include="Assets\Scripts\Misc Scripts\ThirdPersonCamera.cs" />
      <Compile Include="Assets\Scripts\Misc Scripts\TiledFloor.cs" />
      <Compile Include="Assets\Scripts\Misc Scripts\TrashController.cs" />
