--- a/MmmBurrito.csproj
+++ b/MmmBurrito.csproj
@@ -13,13 +13,11 @@
     <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>Unity Subset v3.5</TargetFrameworkProfile>
-    <CompilerResponseFile>
-    </CompilerResponseFile>
+    <CompilerResponseFile></CompilerResponseFile>
     <UnityProjectType>Game:1</UnityProjectType>
     <UnityBuildTarget>StandaloneWindows64:19</UnityBuildTarget>
     <UnityVersion>2017.1.1f1</UnityVersion>
-    <RootNamespace>
-    </RootNamespace>
+    <RootNamespace></RootNamespace>
     <LangVersion>4</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -80,6 +78,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\FlashIfSubmissionPossible.cs" />
     <Compile Include="Assets\Logging\LoggingManager.cs" />
     <Compile Include="Assets\Scripts\Game Controllers\GameController.cs" />
     <Compile Include="Assets\Scripts\Game Controllers\OrderController.cs" />
@@ -89,6 +88,7 @@
     <Compile Include="Assets\Scripts\Meta Scripts\DontDestroyOnLoad.cs" />
     <Compile Include="Assets\Scripts\Meta Scripts\LevelLoader.cs" />
     <Compile Include="Assets\Scripts\Misc Scripts\CaughtIngredientSet.cs" />
+    <Compile Include="Assets\Scripts\Misc Scripts\ColorFlash.cs" />
     <Compile Include="Assets\Scripts\Misc Scripts\Conveyor.cs" />
     <Compile Include="Assets\Scripts\Misc Scripts\DestroyAfterDelay.cs" />
     <Compile Include="Assets\Scripts\Misc Scripts\DestroyOnPlayerCollision.cs" />
@@ -104,13 +104,13 @@
     <Compile Include="Assets\Scripts\Misc Scripts\MovementControllerIsometric.cs" />
     <Compile Include="Assets\Scripts\Misc Scripts\MovementControllerIsometricNew.cs" />
     <Compile Include="Assets\Scripts\Misc Scripts\MoveToScreen.cs" />
-    <Compile Include="Assets\Scripts\Misc Scripts\RatSpawn.cs" />
     <Compile Include="Assets\Scripts\Misc Scripts\ObjectCatcher.cs" />
     <Compile Include="Assets\Scripts\Misc Scripts\ObjectSpawn.cs" />
     <Compile Include="Assets\Scripts\Misc Scripts\OrderList.cs" />
     <Compile Include="Assets\Scripts\Misc Scripts\Powerups\PowerupAddTime.cs" />
     <Compile Include="Assets\Scripts\Misc Scripts\Powerups\PowerupMakeInvulnerable.cs" />
     <Compile Include="Assets\Scripts\Misc Scripts\Rats.cs" />
+    <Compile Include="Assets\Scripts\Misc Scripts\RatSpawn.cs" />
     <Compile Include="Assets\Scripts\Misc Scripts\RotationPrevention.cs" />
     <Compile Include="Assets\Scripts\Misc Scripts\SoundController.cs" />
     <Compile Include="Assets\Scripts\Misc Scripts\ThirdPersonCamera.cs" />
