smoke trail behind player when dashing, and moved scripts

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -51,7 +51,6 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\FlashIfSubmissionPossible.cs" />
      <Compile Include="Assets\JMO Assets\Toony Colors\Demo 2.0\TCF_Demo.cs" />
      <Compile Include="Assets\Logging\LoggingManager.cs" />
      <Compile Include="Assets\Scripts\Game Controllers\GameController.cs" />
@@ -66,6 +65,9 @@
      <Compile Include="Assets\Scripts\Misc Scripts\Conveyor.cs" />
      <Compile Include="Assets\Scripts\Misc Scripts\DestroyAfterDelay.cs" />
      <Compile Include="Assets\Scripts\Misc Scripts\DestroyOnPlayerCollision.cs" />
+     <Compile Include="Assets\Scripts\Misc Scripts\Effects\FlashIfSubmissionPossible.cs" />
+     <Compile Include="Assets\Scripts\Misc Scripts\Effects\SmokeTrail.cs" />
+     <Compile Include="Assets\Scripts\Misc Scripts\Effects\SquashAndStretch.cs" />
      <Compile Include="Assets\Scripts\Misc Scripts\FallDecayDie.cs" />
      <Compile Include="Assets\Scripts\Misc Scripts\FollowPlayer.cs" />
      <Compile Include="Assets\Scripts\Misc Scripts\IdentifyAsSpawnPoint.cs" />
@@ -96,7 +98,6 @@
      <Compile Include="Assets\Scripts\UI\LevelEndUI.cs" />
      <Compile Include="Assets\Scripts\UI\OrderUI.cs" />
      <Compile Include="Assets\Scripts\UI\Timer.cs" />
-     <Compile Include="Assets\SquashAndStretch.cs" />
      <Compile Include="Assets\TileDraw\Scripts\Assets\Entity.cs" />
      <Compile Include="Assets\TileDraw\Scripts\Assets\EntitySet.cs" />
      <Compile Include="Assets\TileDraw\Scripts\Assets\IAsset.cs" />
