transparent walls are now invisible

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -65,6 +65,7 @@
      <Compile Include="Assets\Scripts\Misc Scripts\Conveyor.cs" />
      <Compile Include="Assets\Scripts\Misc Scripts\DestroyAfterDelay.cs" />
      <Compile Include="Assets\Scripts\Misc Scripts\DestroyOnPlayerCollision.cs" />
+     <Compile Include="Assets\Scripts\Misc Scripts\DisableRendererOnPlay.cs" />
      <Compile Include="Assets\Scripts\Misc Scripts\Effects\FlashIfSubmissionPossible.cs" />
      <Compile Include="Assets\Scripts\Misc Scripts\Effects\SmokeTrail.cs" />
      <Compile Include="Assets\Scripts\Misc Scripts\Effects\SquashAndStretch.cs" />
