tickets are now animated. Also big rework of the Order UI

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -101,6 +101,7 @@
      <Compile Include="Assets\Scripts\UI\OrderUI.cs" />
      <Compile Include="Assets\Scripts\UI\Timer.cs" />
      <Compile Include="Assets\TicketAnimations.cs" />
+     <Compile Include="Assets\TicketManager.cs" />
      <Compile Include="Assets\TileDraw\Scripts\Assets\Entity.cs" />
      <Compile Include="Assets\TileDraw\Scripts\Assets\EntitySet.cs" />
      <Compile Include="Assets\TileDraw\Scripts\Assets\IAsset.cs" />
