removed VSync to boost performance

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -58,7 +58,6 @@
      <Compile Include="Assets\FliesSystem\Scripts\Fly.cs" />
      <Compile Include="Assets\JMO Assets\Toony Colors\Demo 2.0\TCF_Demo.cs" />
      <Compile Include="Assets\Logging\LoggingManager.cs" />
-     <Compile Include="Assets\ScaleOverTime.cs" />
      <Compile Include="Assets\Scripts\Game Controllers\GameController.cs" />
      <Compile Include="Assets\Scripts\Game Controllers\OrderController.cs" />
      <Compile Include="Assets\Scripts\Game Controllers\SpawnController.cs" />
@@ -74,6 +73,7 @@
      <Compile Include="Assets\Scripts\Misc Scripts\DisableRendererOnPlay.cs" />
      <Compile Include="Assets\Scripts\Misc Scripts\Effects\ColorSetter.cs" />
      <Compile Include="Assets\Scripts\Misc Scripts\Effects\FlashIfSubmissionPossible.cs" />
+     <Compile Include="Assets\Scripts\Misc Scripts\Effects\ScaleOverTime.cs" />
      <Compile Include="Assets\Scripts\Misc Scripts\Effects\SmokeTrail.cs" />
      <Compile Include="Assets\Scripts\Misc Scripts\Effects\SquashAndStretch.cs" />
      <Compile Include="Assets\Scripts\Misc Scripts\FallDecayDie.cs" />
@@ -107,9 +107,10 @@
      <Compile Include="Assets\Scripts\Misc Scripts\WalkingChef.cs" />
      <Compile Include="Assets\Scripts\UI\LevelEndUI.cs" />
      <Compile Include="Assets\Scripts\UI\OrderUI.cs" />
+     <Compile Include="Assets\Scripts\UI\TicketAnimations.cs" />
+     <Compile Include="Assets\Scripts\UI\TicketManager.cs" />
      <Compile Include="Assets\Scripts\UI\Timer.cs" />
-     <Compile Include="Assets\TicketAnimations.cs" />
-     <Compile Include="Assets\TicketManager.cs" />
+     <Compile Include="Assets\Scripts\UI\UIAnimationManager.cs" />
      <Compile Include="Assets\TileDraw\Scripts\Assets\Entity.cs" />
      <Compile Include="Assets\TileDraw\Scripts\Assets\EntitySet.cs" />
      <Compile Include="Assets\TileDraw\Scripts\Assets\IAsset.cs" />
