now tweens pos+scale of timer instead of a separate message

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -125,7 +125,10 @@
      <Compile Include="Assets\TileDraw\Scripts\Util\CreatePlane.cs" />
      <Compile Include="Assets\TileDraw\Scripts\Util\Enums.cs" />
      <Compile Include="Assets\TileDraw\Scripts\Util\Util.cs" />
+     <Compile Include="Assets\Tween\Demo\TweenDemo.cs" />
+     <Compile Include="Assets\Tween\Tween.cs" />
      <None Include="Assets\FliesSystem\Example\Standard Assets\Projectors\Sources\Shaders\Projector Multiply.shader" />
+     <None Include="Assets\Tween\Readme.txt" />
      <None Include="Assets\JMO Assets\Toony Colors\!ToonyColors Readme.txt" />
      <None Include="Assets\JMO Assets\!JMO Assets Readme.txt" />
      <None Include="Assets\JMO Assets\Toony Colors\Shaders 2.0\Rim Outline.shader" />
