now saves high score for each level

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -65,6 +65,8 @@
      <Compile Include="Assets\Scripts\Meta Scripts\_preloader.cs" />
      <Compile Include="Assets\Scripts\Meta Scripts\DontDestroyOnLoad.cs" />
      <Compile Include="Assets\Scripts\Meta Scripts\LevelLoader.cs" />
+     <Compile Include="Assets\Scripts\Meta Scripts\Save.cs" />
+     <Compile Include="Assets\Scripts\Meta Scripts\SaveManager.cs" />
      <Compile Include="Assets\Scripts\Misc Scripts\CaughtIngredientSet.cs" />
      <Compile Include="Assets\Scripts\Misc Scripts\ColorFlash.cs" />
      <Compile Include="Assets\Scripts\Misc Scripts\Conveyor.cs" />
