basic score setup

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -109,6 +109,7 @@
      <Compile Include="Assets\Scripts\Misc Scripts\WalkingChef.cs" />
      <Compile Include="Assets\Scripts\UI\LevelEndUI.cs" />
      <Compile Include="Assets\Scripts\UI\OrderUI.cs" />
+     <Compile Include="Assets\Scripts\UI\ScoreUI.cs" />
      <Compile Include="Assets\Scripts\UI\TicketAnimations.cs" />
      <Compile Include="Assets\Scripts\UI\TicketManager.cs" />
      <Compile Include="Assets\Scripts\UI\Timer.cs" />
