new level 3, tweaked lvl 2 and readded to build settings

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -56,8 +56,10 @@
      <Compile Include="Assets\FliesSystem\Scripts\Fly.cs" />
      <Compile Include="Assets\JMO Assets\Toony Colors\Demo 2.0\TCF_Demo.cs" />
      <Compile Include="Assets\Logging\LoggingManager.cs" />
+     <Compile Include="Assets\PreventDecay.cs" />
      <Compile Include="Assets\Scripts\Game Controllers\GameController.cs" />
      <Compile Include="Assets\Scripts\Game Controllers\OrderController.cs" />
+     <Compile Include="Assets\Scripts\Game Controllers\SoundController.cs" />
      <Compile Include="Assets\Scripts\Game Controllers\SpawnController.cs" />
      <Compile Include="Assets\Scripts\Game Controllers\SubmissionController.cs" />
      <Compile Include="Assets\Scripts\Meta Scripts\_preloader.cs" />
@@ -98,7 +100,6 @@
      <Compile Include="Assets\Scripts\Misc Scripts\RatSpawn.cs" />
      <Compile Include="Assets\Scripts\Misc Scripts\RotationPrevention.cs" />
      <Compile Include="Assets\Scripts\Misc Scripts\Shrink.cs" />
-     <Compile Include="Assets\Scripts\Misc Scripts\SoundController.cs" />
      <Compile Include="Assets\Scripts\Misc Scripts\ThirdPersonCamera.cs" />
      <Compile Include="Assets\Scripts\Misc Scripts\TiledFloor.cs" />
      <Compile Include="Assets\Scripts\Misc Scripts\TrashController.cs" />
