fixed ingredients who couldnt decay before never being able to decay again

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -56,7 +56,6 @@
      <Compile Include="Assets\FliesSystem\Scripts\Fly.cs" />
      <Compile Include="Assets\JMO Assets\Toony Colors\Demo 2.0\TCF_Demo.cs" />
      <Compile Include="Assets\Logging\LoggingManager.cs" />
-     <Compile Include="Assets\PreventDecay.cs" />
      <Compile Include="Assets\Scripts\Game Controllers\GameController.cs" />
      <Compile Include="Assets\Scripts\Game Controllers\OrderController.cs" />
      <Compile Include="Assets\Scripts\Game Controllers\SoundController.cs" />
@@ -96,6 +95,7 @@
      <Compile Include="Assets\Scripts\Misc Scripts\OrderList.cs" />
      <Compile Include="Assets\Scripts\Misc Scripts\Powerups\PowerupAddTime.cs" />
      <Compile Include="Assets\Scripts\Misc Scripts\Powerups\PowerupMakeInvulnerable.cs" />
+     <Compile Include="Assets\Scripts\Misc Scripts\PreventDecay.cs" />
      <Compile Include="Assets\Scripts\Misc Scripts\Rats.cs" />
      <Compile Include="Assets\Scripts\Misc Scripts\RatSpawn.cs" />
      <Compile Include="Assets\Scripts\Misc Scripts\RotationPrevention.cs" />
